--- a/sleepytime_clone.html
+++ b/sleepytime_clone.html
@@ -6,18 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="homepage_images/cat_image_1.png">
-    <img src="homepage_images/magikarp_guy.png" alt="magikarp_guy_icon_left" style="float: left;">
-    <img src="homepage_images/magikarp_guy.png" alt="magikarp_guy_icon_right" style="float: right;">
+    <img src="homepage_images/cat_image_2.png" alt="icon_left" width="7%" style="float: left;">
+    <img src="homepage_images/cat_image_2.png" alt="icon_right" width="7%" style="float: right;">
 </head>
 
 <body align="center">
     <title>sleepyti.me clone</title>
         <h1 style="color: mediumaquamarine;">My First Somewhat Cloned Website</h1>
         <p style="color: lightseagreen; font-family: Raleway; font-size: small;">
-            <a href="https://sleepyti.me/" target="_blank">Original Website</a> 
+            <a href="https://sleepyti.me/" target="_blank" style="font-size: large;">Original Website</a> 
         </p>
-        <p style="font-size: 140%; color: rgb(0, 128, 255);">
-            A good night's sleep consists of 5-6 complete sleep cyclyes</p>
         <div id="content">
             <div id="haveToWakeUp">
                 <p class="homepageParagraph">I have to wake up at...</p>
@@ -33,7 +31,7 @@
             </div>
             <div id="planToSleep">
                 <br>
-                <p class="homepageParagraph">I plan to fall asleep at...</p>
+                <p class="homepageParagraph">I plan to FALL ASLEEP at...</p>
                 <br>
                 <select id="planToSleepHour">
                 </select>
@@ -46,8 +44,8 @@
             </div>
             <div id="sleepNow">
                 <br>
-                <p class="homepageParagraph">If you sleep now, you should wake up at...</p>
-                <button class="calculateBtn" id="sleepNowBtn">calculate</button>
+                <p class="homepageParagraph">If you go to bed NOW, you should wake up at...</p>
+                <button class="calculateBtn" id="sleepNowBtn" style="width: 90px"">zzz</button>
             </div>
     </div>
     <div id="results">
